2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/common/messages.py:
	  Rename a terribly named method that is internal to the file.
	  Use it to log creation and addition of translatables to messages.

2008-05-07  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/bttv/wizard_gtk.py:
	convert private methods and variables to camel case.

2008-05-07  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/producers/bttv/wizard.glade: 
	* flumotion/component/producers/bttv/wizard_gtk.py:
	Speculative fix for BTTV: Add channel and signal properties

2008-05-07  Arek Korbik  <arkadini@gmail.com>

	* flumotion/component/producers/bttv/bttv.py (BTTV.configure_pipeline):
	Allow the 'signal' property to be optional in the code, too.

2008-05-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/speex/speex.xml:
	* flumotion/component/encoders/vorbis/vorbis.xml:
	  unify encoder description.

2008-05-06  Jordi Massaguer i Pla  <jordi@flumotion.com>

	reviewed by: Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/conversionsteps.py:
	  Added theora and vorbis as default encoders. Fixes #926.

2008-05-06  Pedro Gracia <pedro@flumotion.com>

	* po/es.po:
	New spanish strings translated.

2008-05-06  Pedro Gracia <pedro@flumotion.com>

	* po/es.po:
	Spanish translation up to date.

2008-05-06  Johan Dahlin  <johan@flumotion.com>

	* data/glade/ondemand-wizard.glade:
	* data/glade/production-wizard.glade:
	* flumotion/ui/wizard.py:
	* flumotion/wizard/Makefile.am:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/ondemandstep.py:
	* flumotion/wizard/productionsteps.py:
	Add ondemand step to the wizard, fixes #932

2008-05-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  Invoke cert generation through sh, fix for installed version.

2008-05-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* doc/random/styleguide: